# solana-vault-standard

./: Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  README.md
docs/: ARCHITECTURE.md  MODULES.md  SVS-1.md  SVS-2.md  SVS-3.md  SVS-4.md  SVS-5.md  SVS-8.md  TESTING.md  fix-SVS2.md  specs-SVS05.md  specs-SVS06.md  specs-SVS07.md  specs-SVS08.md  specs-SVS09.md  specs-SVS10.md  specs-SVS11.md  specs-SVS12.md  specs-modules.md
modules/svs-module-hooks/src/: hooks.rs
programs/svs-5/: Cargo.toml
programs/svs-5/src/: constants.rs  error.rs  lib.rs  math.rs  state.rs
programs/svs-6/: Cargo.toml
programs/svs-6/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/svs-7/: Cargo.toml  README.md
programs/svs-7/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/svs-8/: Cargo.toml
programs/svs-8/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/svs-8/src/instructions/: add_asset.rs  admin.rs  deposit_proportional.rs  deposit_single.rs  initialize.rs  mod.rs  oracle_admin.rs  redeem_proportional.rs  redeem_single.rs  remove_asset.rs  set_price.rs  update_weights.rs  view.rs
scripts/shared/: common-helpers.ts
scripts/svs-5/: basic.ts  edge-cases.ts  full-drain.ts  helpers.ts  inflation-attack.ts  live-balance.ts  multi-user.ts  slippage.ts  view-functions.ts  withdraw-mint.ts
scripts/svs-8/: basic.ts  helpers.ts
sdk/core/: package.json
sdk/core/src/: basket-vault.ts  index.ts  streaming-vault.ts
tests/: svs-5.ts  svs-8.ts
trident-tests/fuzz_svs5/: test_fuzz.rs
(+30 files in other folders)
